# robot_2a_2025

./: .gitignore  API.md  README.md  gen_compile_commands.py  platformio.ini
embedded_firmware/: Makefile  README.md  justfile  platformio.ini
embedded_firmware/src/: ClassMotors.cpp  ComWithRasp.cpp  GoToPosition.hpp  OLEDInterface.hpp  actionneur.cpp  actionneur.h  commande_serie.cpp  common.cpp  common.h  main.cpp  main_robot.cpp  main_robot.h  motors.cpp  strat.cpp  strat.h  terminal_bluetooth.cpp  terminal_bluetooth.h  tofs.h
embedded_intelligence/: .gitignore  Makefile  README.md  esp_serial.py  fifo_com.py  firmware.py  justfile  main.py  other_try.py  protocol_for_serial_test.md  pyproject.toml  read_fifo.py  requirements.txt  world.py
embedded_intelligence/robot_settings/: debug.toml  debug_mock.toml  fifo_debug.toml  main.toml  socket_debug.toml
embedded_intelligence/src/cfr_2025_2a_embedded_ai/: config.py  debug_log.py  firmware.py  main.py  mock_fifo_esp.py  prefixes.py  read_fifo.py
embedded_intelligence/src/cfr_2025_2a_embedded_ai/communication/: com.py  fifo_com.py  serial_com.py  socket_com.py
embedded_intelligence/src/cfr_2025_2a_embedded_ai/experimental/: esp_serial.py
embedded_intelligence/src/cfr_2025_2a_embedded_ai/mocking/: mock_fifo_esp.py  mock_serial_esp.py  mock_socket_esp.py
fichiers_additionels/: manette_8bits_v2.apk
include/: actionneur.h  antonin.h
src/: ClassMotors.cpp  ClassMotors.hpp  ComWithRasp.cpp  ComWithRasp.hpp  GoToPosition.cpp  GoToPosition.hpp  OLEDInterface.cpp  OLEDInterface.hpp  actionneur.cpp  actionneur.h  antonin.cpp  bluetooth.cpp  bluetooth.h  commande_serie.cpp  commande_serie.h  common.cpp  common.h  main.cpp  main.h  main_robot.cpp  main_robot.h  menu.cpp  menu.hpp  motors.cpp  motors.h  odometrie.h  strat.cpp  strat.h  terminal_bluetooth.cpp  terminal_bluetooth.h  tofs.cpp  tofs.h
src/robot/: GoToPosition.cpp  actionneur.h  commande_serie.h  common.h  strat.cpp
